fix(menu): allow app menu scrolling on small screens

--- a/src/widgets/layout/ui/styles.module.css
+++ b/src/widgets/layout/ui/styles.module.css
@@ -88,3 +88,14 @@
   }
 }
 
+.scrollableMenu {
+  overflow: hidden auto;
+  max-height: 100vh;
+}
+
+@media (max-width: 992px) {
+  .scrollableMenu {
+    max-height: calc(100vh - 60px);
+  }
+}
+
